<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <include layout="@layout/toolbar"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:layout_below="@id/rl_header"
            android:layout_marginTop="15dp"

            android:padding="10dp"
            android:background="@drawable/border_radius">

            <ImageView
                android:id="@+id/img_post"
                android:layout_width="130dp"
                android:layout_height="140dp"
                android:padding="10dp"
                android:src="@drawable/futbol"
                android:scaleType="centerCrop"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:background="@drawable/border_radius"
                android:layout_toRightOf="@id/img_post">

                <TextView
                    android:id="@+id/texto1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/texto1"
                    android:paddingLeft="25dp"
                    android:textColor="#000000"
                    android:paddingTop="35dp"
                    android:textSize="15sp"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_alignParentBottom="true"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:paddingLeft="10dp"
                    android:background="@drawable/border_radius">
                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <TextView
                            android:id="@+id/tv_5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/str_5"
                            android:textSize="15sp"
                            android:textColor="#000000"
                            android:layout_centerVertical="true"/>
                    </RelativeLayout>
                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <TextView
                            android:id="@+id/tv_6"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/str_6"
                            android:textSize="12sp"
                            android:textColor="#000000"
                            android:textStyle="bold"

                            android:layout_centerVertical="true"/>
                    </RelativeLayout>
                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <TextView
                            android:id="@+id/tv_7"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/str_7"
                            android:textColor="#000000"
                            android:textSize="12sp"
                            android:textStyle="bold"
                            android:layout_centerVertical="true"/>
                    </RelativeLayout>
                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <TextView
                            android:id="@+id/tv_8"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/str_8"
                            android:textColor="#000000"
                            android:textSize="12sp"
                            android:textStyle="bold"
                            android:layout_centerVertical="true"/>
                    </RelativeLayout>
                </LinearLayout>
            </RelativeLayout>
        </RelativeLayout>
    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>
